# kapitan

./: .dockerignore  .gitignore  .gitmodules  .markdownlint.yml  .markdownlintignore  .pre-commit-config.yaml  .travis.yml  404.html  AUTHORS  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  Dockerfile.docs  Dockerfile.poetry  Dockerfile.pyinstaller  IDEAS.md  MAINTAINERS.md  MANIFEST.in  Makefile  PULL_REQUEST_TEMPLATE.md  Pipfile  README.md  README.rst  SECURITY.md  SUPPORT.md  _config.yml  build-binary.sh  codecov.yml  default.nix  flake.nix  index.html  kapitan_overview.xml  latest  make_release.sh  mise.toml  mkdocs.yml  pyproject.toml  (+8 more)
.github/: FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  issue_template.md  issue_template.yml
.github/filters/: filters.yml
.github/workflows/: README.md  benchmark-master.yml  benchmark-pr.yml  benchmark-reusable.yml  benchmark.yml  bleeding-edge.yml  docker-image.yml  documentation.yml  housekeeping.yml  makefile-test.yml  pex-build-upload.yml  pr-auto-label.yml  python-black.yml  python-lint.yml  python-pip-publish.yml  python-pypi-publish-dev.yml  python-pypi-publish.yml  python-tests.yml  security-audit.yml  test-build-publish.yml  test-coverage.yml  test.yml  vhs.yml
.reuse/: dep5
0.1/: 404.html  index.html  sitemap.xml
0.1/ADOPTERS/: index.html
0.1/FAQ/: index.html
0.1/getting_started/: index.html
0.33/: 404.html  index.html  sitemap.xml
0.34/: 404.html  index.html  sitemap.xml
0.36/: 404.html  index.html  sitemap.xml
ADOPTERS/: index.html
CI/: index.html
FAQ/: index.html
ci/: Dockerfile  README.md
compile/: index.html
contributing/: index.html
dev/: 404.html  hooks.py  index.html  sitemap.xml
docker-ci/: README.md
docker-mac/: Dockerfile  README.md  entrypoint.sh
docs/: ADOPTERS.md  CI.md  FAQ.md  README.md  commands.md  compile.md  contributing.md  example-kubernetes.md  example-terraform.md  external_dependencies.md  gen_flags.py  getting_started.md  init.md  input_types.md  inventory-structure.md  inventory.md  kapitan_overview.md  proposals.md  pyenv-scl.md  references.md  related.md  remote_repositories.md  robots.txt  secrets.md  support.md  tags.md  usage.md  validate.md
example-kubernetes/: index.html
example-terraform/: index.html
examples/: Makefile
external_dependencies/: index.html
getting_started/: index.html
inventory/: index.html
kapitan/: __init__.py  __main__.py  cached.py  cli.py  context.py  defaults.py  errors.py  helm_cli.py  initialiser.py  inventory.py  jinja2_filters.py  lint.py  logger.py  logging.py  migrate_omegaconf.py  omegaconf.py  omegaconf_inv.py  profiling.py  references.py  resolvers.py  resources.py  secrets.py  secrets_new.py  targets.py  topics.py  utils.py  version.py  yaml_ryml.py
kapitan-compile-action/: README.md  action.yml
kapitan-core/: Cargo.toml  README.md  pyproject.toml
kapitan-core/src/: lib.rs
kapitan_overview/: index.html
latest/: 404.html  index.html  sitemap.xml
master/: 404.html  index.html  sitemap.xml
omegaconf/: _utils.py  base.py  basecontainer.py  dictconfig.py  grammar_parser.py  grammar_visitor.py  listconfig.py  nodes.py  omegaconf.py
overrides/: main.html  redirect.html
proposals/: index.html
pyenv-scl/: index.html
references/: index.html
related/: index.html
scripts/: after_deploy.sh  build-binary.sh  build-mac-osx-binary.sh  check_coverage.py  generate_benchmark_summary.py  generate_checksums.sh  generate_profiling_summary.py  generate_sbom.sh  hook-google.cloud.secretmanager.py  inc_version.sh  kap_5_migrate.py  make_release.sh  pyinstaller.sh  refresh_backend_goldens.py  refresh_inventory_backend_goldens.py  run_tests_in_random_order.sh  update-bleeding-edge.sh  validate_sbom.sh
search/: search_index.json
secrets/: index.html
support/: index.html
tags/: index.html
tests/: README.md  TESTING_BEST_PRACTICES.md  __init__.py  backend_examples.py  batch_refactor_tests.py  compile_test.py  conftest.py  gpg_test.py  inventory_backend_examples.py  inventory_test.py  kubernetes_validator_test.py  oci_registry_server.py  refactor_tests.py  refs_test.py  remote_inventory_test.py  test_api_compile.py  test_azure.py  test_backend_examples.py  test_binary.py  test_binary_input.py  test_cached.py  test_class_wildcards.py  test_cli.py  test_compile.py  test_compile_context.py  test_compile_performance.py  test_compose_node_name.py  test_copy.py  test_coverage_gate.py  test_cuelang_input.py  test_defaults.py  test_dependency_manager.py  test_dependency_pinning.py  test_deterministic_compile.py  test_docs_flags.py  test_docs_rendering.py  test_errors.py  test_external_contracts.py  test_external_input.py  test_from_dot_kapitan.py  (+51 more)
usage/: index.html
v2/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  kapitan.ci.toml.example  kapitan.toml  pyproject.toml  run-kapitan.sh
v2/src/kapitan/: __init__.py
v2/src/kapitan/cli/: __init__.py  main.py
v2/src/kapitan/core/: __init__.py  compiler.py  config.py  exceptions.py  inventory_tui.py  inventory_ui.py
v2/src/kapitan/inputs/: __init__.py
v2/src/kapitan/inventory/: __init__.py
v2/src/kapitan/legacy/: __init__.py  inventory.py  simple_reader.py
v2/src/kapitan/refs/: __init__.py
v2/src/skipper/: __init__.py
v2/src/skipper/cli/: __init__.py  main.py
v2/src/skipper/cli/commands/: __init__.py  base.py  compile.py  init.py  inventory.py  targets.py
v2/src/skipper/core/: __init__.py  compiler.py  config.py  container.py  decorators.py  exceptions.py  inventory.py  inventory_tui.py  models.py  targets.py  validation.py
v2/src/skipper/core/formatters/: __init__.py  base.py  console.py  json_formatter.py  plain.py
v2/src/skipper/inputs/: __init__.py
v2/src/skipper/inventory/: __init__.py
v2/src/skipper/legacy/: __init__.py  inventory.py  simple_reader.py
v2/src/skipper/refs/: __init__.py
v2/tests/: __init__.py  test_cli.py  test_exceptions.py
validate/: index.html
(+1508 files in other folders)
