[build-system]
requires = [
    "poetry-core>=1.8.0",
    "poetry-version-plugin==0.1.3"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kapitan"
description = "Generic templated configuration management for Kubernetes, Terraform and other things"
authors = [
    "Ricardo Amaro <ramaro@kapicorp.com>"
]
documentation  = "https://kapitan.dev/"
repository = "https://github.com/kapicorp/kapitan"
readme = "README.md"
keywords = ["jsonnet", "kubernetes", "reclass", "jinja"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "Apache-2.0"
version = "0.34.6"
packages = [
    { include = "kapitan" },
]

[tool.poetry.scripts]
kapitan = 'kapitan.cli:main'


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
coverage = "^7.6.1"
pytest-md = "^0.2.0"
pytest-emoji = "^0.2.0"
pytest-cov = ">=3,<7"
docker = "^7.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pre-commit = ">=3.8,<5.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
flake8-bugbear = "^24.8.19"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
markdown-include = "^0.8.1"
mkdocs-material = "^9.5.34"
mkdocs = "^1.6.1"
pymdown-extensions = "^10.9"
mike = "^2.1.3"
mkdocs-material-extensions = "^1.3.1"
markdown-exec = {extras = ["ansi"], version = "^1.10.0"}

[tool.poetry-version-plugin]
source = "git-tag"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
strenum = { version = "^0.4.15", python = "^3.10" }
addict = "^2.4.0"
azure-keyvault-keys = "^4.7.0"
boto3 = "^1.18.17"
cryptography = ">=3.4.7,<44.0.0"
gitpython = "^3.1.30"
google-api-python-client = "^2.15.0"
hvac = "2.3.0"
jinja2 = "^3.0.1"
jsonnet = "^0.21.0"
jsonschema = "^4.17.3"
python-gnupg = ">=0.4.7,<0.6.0"
pyyaml = "^6.0"
requests = "^2.28.2"
six = "^1.16.0"
toml = "^0.10.2"
yamllint = "^1.29.0"
azure-identity = "^1.12.0"
certifi = "*"
gitdb = "^4.0.10"
packaging = ">=23,<25"
typing-extensions = "^4.0.0"
kadet = "^0.3.0"
regex = "^2024.5.10"
omegaconf = {version = "^2.4.0.dev3", optional = true}
reclass-rs = {version = "^0.8.0", optional = true }
gojsonnet = { version = "^0.21.0", optional = true }
kapicorp-reclass = ">=2.0.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
python-box = "^7.2.0"
copier = "^9.3.1"
jsonpath-ng = "^1.7.0"
filetype = "^1.2.0"

[tool.poetry.extras]
gojsonnet = ["gojsonnet"]
reclass-rs = ["reclass-rs"]
omegaconf = ["omegaconf"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 110
extend-select = "B950"
extend-ignore = "E203,E501,E701"

[tool.black]
line-length = 110
target-version = ['py311']

[tool.poetry_bumpversion.file."kapitan/version.py"]
search = 'VERSION = "{current_version}"'
replace = 'VERSION = "{new_version}"'
