[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "kapitan"
dynamic = ["version"]
description = "Generic templated configuration management for Kubernetes, Terraform and other things"
authors = [
    { name = "Ricardo Amaro", email = "ramaro@kapicorp.com" },
]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "jsonnet",
    "kubernetes",
    "reclass",
    "jinja",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "addict>=2.4.0,<3",
    "jinja2>=3.0.1,<4",
    "jsonnet>=0.21.0,<0.22",
    "jsonschema>=4.17.3,<5",
    "pyyaml~=6.0",
    "requests>=2.28.2,<3",
    "toml>=0.10.2,<0.11",
    "yamllint>=1.29.0,<2",

    # Data validation and configuration
    "pydantic>=2.8.2,<3",
    "pydantic-settings>=2.4.0,<3",
    "python-box>=7.2.0,<8",
    "jsonpath-ng>=1.7.0,<2",

    # Inventory backends
    "kapicorp-reclass>=2.0.0",
    # optional: omegaconf
    # optional: reclass

    # Input types
    # optional: gojsonnet
    "kadet>=0.3.0,<0.4",
    "copier>=9.3.1,<10",

    # Cloud and secrets management
    "azure-keyvault-keys>=4.7.0,<5",
    "azure-identity>=1.12.0,<2",
    "boto3>=1.18.17,<2",
    "google-api-python-client>=2.15.0,<3",
    "hvac==2.3.0",
    "python-gnupg>=0.4.7,<0.6.0",
    "cryptography>=3.4.7,<44.0.0",

    # Git and file management
    "gitpython>=3.1.30,<4",
    "gitdb>=4.0.10,<5",
    "filetype>=1.2.0,<2",

    # Utilities
    "certifi",
    "packaging>=23,<26",
    "regex>=2024.5.10,<2025",
    "strenum>=0.4.15,<0.5 ; python_version ~= '3.10'",
    "typing-extensions>=4.0.0,<5",
]

[project.optional-dependencies]
gojsonnet = ["gojsonnet>=0.21.0,<0.22"]
omegaconf = ["omegaconf>=2.4.0.dev3,<3"]
reclass-rs = ["reclass-rs>=0.9.0,<0.10"]

[project.urls]
Homepage = "https://kapitan.dev"
Repository = "https://github.com/kapicorp/kapitan"
Documentation = "https://kapitan.dev/"

[project.scripts]
kapitan = "kapitan.cli:main"

[dependency-groups]
test = [
    "pytest>=8.2.0,<9",
    "coverage>=7.6.1,<8",
    "pytest-httpserver>=1.0.9,<2",
    "pytest-md>=0.2.0,<0.3",
    "pytest-emoji>=0.2.0,<0.3",
    "pytest-cov>=3,<7",
    "pytest-httpserver>=1.1.3",
    "pytest-git >=1.8.0",
    "pytest-random-order>=1.2.0",
    "pytest-json-report>=1.5.0",
    "pytest-xdist>=3.8.0",
    "docker>=7.0.0,<8",
]
dev = [
    # Tool configurations moved to ruff.toml for consistency
    # See ruff.toml for linting and formatting configuration
    "ruff~=0.8.6",
    "pre-commit>=4.3,<5.0",
]
docs = [
    "markdown-include>=0.8.1,<0.9",
    "mkdocs-material>=9.5.34,<10",
    "mkdocs>=1.6.1,<2",
    "pymdown-extensions~=10.9",
    "mike>=2.1.3,<3",
    "mkdocs-material-extensions>=1.3.1,<2",
    "markdown-exec[ansi]>=1.10.0,<2",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
    "docs",
]
cache-keys = [
    { file = "pyproject.toml" },
    { git = { tags = true } },
]

[tool.hatch.build.targets.sdist]
include = ["kapitan"]

[tool.hatch.build.targets.wheel]
include = ["kapitan"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
# NOTE: preview version with: uvx uv-dynamic-versioning
# https://github.com/ninoseki/uv-dynamic-versioning/blob/main/docs/version_source.md#configuration
vcs = "git"
style = "semver"
format = "{base}"
# https://github.com/ninoseki/uv-dynamic-versioning/blob/main/docs/tips.md#dependabot
fallback-version = "0.0.0"

[tool.uv-dynamic-versioning.from-file]
source = "kapitan/version.py"
pattern = '^VERSION = "(.*)"$'

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=kapitan",
    "--cov-branch",
    # don't report when running pytest, get report with: uv run coverage report
    "--cov-report=",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["kapitan"]
branch = true
parallel = true
concurrency = ["multiprocessing"]
command_line = "-m pytest"
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
fail_under = 63
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
